@@ -281,10 +281,6 @@ Other Changes
 
   Closes #6644
 
-* ``pylint.pyreverse.ASTWalker`` has been removed, as it was only used internally by a single child class.
-
-  Ref #6712
-
 
 Deprecations
 ============
@@ -386,6 +382,15 @@ Deprecations
   be removed in a future release.
 
   Ref #5392
+
+* ``pylint.pyreverse.ASTWalker`` has been removed, as it was only used internally by a single child class.
+
+  Ref #6712
+
+* ``pyreverse``: Resolving and displaying implemented interfaces that are defined by the ``__implements__``
+  attribute has been deprecated and will be removed in 3.0.
+
+  Ref #6713
 
 * ``is_class_subscriptable_pep585_with_postponed_evaluation_enabled`` has been deprecated.
   Use ``is_postponed_evaluation_enabled(node) and is_node_in_type_annotation_context(node)``
